Finished initial proofreading of ch. 2&3

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -1,56 +1,60 @@
 \begin{abbreviations}
-List of common abbreviations, a section is referenced when applicable. Entries are separated between the fields of physics and computer science.
+List of common abbreviations, a section is referenced when applicable. Entries are separated by field.
 
-\begin{table}[h]
-  \centering
-  \begin{tabular}{lll}
+\begin{longtable}[c]{lll}
+  \hline
+  \endhead
+  \hline
+  \endfoot
     
-    \hline
+  \multicolumn{3}{c}{\textbf{Physics}} \\
+  \hline
 
-    \bidmas{} & Binary Interaction Dust Model with Accretion and Sputtering & Section \ref{sec:bidmas} \\
-    3$\alpha$ & Triple-$\alpha$ & Section \ref{sec:evolvedstars} \\
-    AGB & Asymptotic Giant Branch & Section \ref{sec:evolvedstars} \\
-    CAK & Castor, Abbott \& Klein (\citeyear{castor_radiation-driven_1975}) theory & Section \ref{sec:cak} \\
-    CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
-    FGC & Fighting Game Community & Section \ref{sec:wcrcooling} \\
-    GCR & Galactic Cosmic Ray & Section \ref{sec:wcrcooling} \\
-    GMC & Giant Molecular Cloud & Section \ref{sec:obtype}\\
-    ISM & InterStellar Medium & Section \ref{sec:earlytype} \\
-    KH  & Kelvin-Helmholtz & Section \ref{sec:earlytype} \\ 
-    LBV & Luminous Blue Variable & Section \ref{sec:obtype} \\
-    MESA & Modules for Experiments in Stellar Astrophysics & Section \ref{sec:evolvedstars} \\
-    MIST & MESA Isochrones and Stellar Tracks & Section \ref{sec:evolvedstars} \\
-    OB  & O or B type star & Section \ref{sec:obtype} \\ 
-    PAH & Polycyclic Aromatic Hydrocarbon & Section \ref{sec:dust} \\
-    RSG & Red Supergiant & Section \ref{sec:obtype} \\
-    WC  & WR Carbon Phase & Section \ref{sec:wrtype} \\
-    WCd & Dust forming WC star & Section \ref{sec:cwbdust} \\
-    WCR & Wind Collision Region & Section \ref{sec:wcr} \\
-    WN  & WR Nitrogen Phase & Section \ref{sec:wrtype} \\
-    WO  & WR Oxygen Phase & Section \ref{sec:wrtype} \\
-    WR  & Wolf-Rayet & Section \ref{sec:wrtype} \\
+  \bidmas{} & Binary Interaction Dust Model with Accretion and Sputtering & Section \ref{sec:bidmas} \\
+  3$\alpha$ & Triple-$\alpha$ & Section \ref{sec:evolvedstars} \\
+  AGB & Asymptotic Giant Branch & Section \ref{sec:evolvedstars} \\
+  CAK & Castor, Abbott \& Klein (\citeyear{castor_radiation-driven_1975}) & Section \ref{sec:cak} \\
+  CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
+  GCR & Galactic Cosmic Ray & Section \ref{sec:wcrcooling} \\
+  GMC & Giant Molecular Cloud & Section \ref{sec:obtype}\\
+  ISM & InterStellar Medium & Section \ref{sec:earlytype} \\
+  KH  & Kelvin-Helmholtz & Section \ref{sec:earlytype} \\ 
+  LBV & Luminous Blue Variable & Section \ref{sec:obtype} \\
+  MESA & Modules for Experiments in Stellar Astrophysics & Section \ref{sec:evolvedstars} \\
+  MIST & MESA Isochrones and Stellar Tracks & Section \ref{sec:evolvedstars} \\
+  OB  & O or B type star & Section \ref{sec:obtype} \\ 
+  PAH & Polycyclic Aromatic Hydrocarbon & Section \ref{sec:dust} \\
+  RSG & Red Supergiant & Section \ref{sec:obtype} \\
+  WC  & Wolf-Rayet Carbon phase & Section \ref{sec:wrtype} \\
+  WCd & Dust forming WC star & Section \ref{sec:cwbdust} \\
+  WCR & Wind Collision Region & Section \ref{sec:wcr} \\
+  WN  & Wolf-Rayet Nitrogen phase & Section \ref{sec:wrtype} \\
+  WO  & Wolf-Rayet Oxygen phase & Section \ref{sec:wrtype} \\
+  WR  & Wolf-Rayet & Section \ref{sec:wrtype} \\
 
-    \hline
+  \hline
+  \multicolumn{3}{c}{\textbf{Computer Science}} \\
+  \hline
 
-    AVX  & Advanced Vector Extensions & \\
-    GCC  & GNU Compiler Collection & \\
-    GNU  & GNU's Not Unix! & \\
-    GPU  & Graphics Processing Unit & \\
-    ICC  & Intel Compiler Collection & \\
-    JIT  & Just In Time & Appendix \ref{sec:visualisation} \\
-    MPI  & Message Passing Interface & Appendix \ref{app:parallelism} \\
-    SIMD & Single Instruction, Multiple Data & \\
-    SMT  & Simultaneous Multi-Threading & \\
+  AVX  & Advanced Vector Extensions & \\
+  GCC  & GNU Compiler Collection & \\
+  GNU  & GNU's Not Unix!\footnote{Frustrating, I know.} & \\
+  GPU  & Graphics Processing Unit & \\
+  ICC  & Intel Compiler Collection & \\
+  JIT  & Just In Time & Appendix \ref{sec:visualisation} \\
+  MP   & Multi Processing & Appendix \ref{app:parallelism} \\
+  MPI  & Message Passing Interface & Appendix \ref{app:parallelism} \\
+  SIMD & Single Instruction, Multiple Data & \\
+  SMT  & Simultaneous Multi-Threading & \\
 
-    \hline
+  \hline
+  \multicolumn{3}{c}{\textbf{Mathematics}} \\
+  \hline
 
-    RK & Runge-Kutta & \\
-    CFL & Courant-Friedrichs-Lewy & Section \ref{sec:numsim} \\
+  CFL  & Courant-Friedrichs-Lewy & Section \ref{sec:numsim} \\
+  HLLC & Harten-Lax-van Leer-Contact & Section \ref{sec:numsim} \\
+  RK   & Runge-Kutta & \\
+  TEF & Temporal Evolution Function & Section \ref{sec:othercalc} \\
 
-  \end{tabular} 
-  \label{tbl:Abbreviations}
-\end{table}
-
-
-
+\end{longtable}
 \end{abbreviations}
