--- a/Appendix/Appendix.tex
+++ b/Appendix/Appendix.tex
@@ -16,7 +16,7 @@ This project relied on a number of resources available from the University of Le
 Not to opine on the importance of open source projects for too long, but we as researchers should be aware of the time, effort and labour of programmers developing open source projects.
 Learning that perhaps the bulk of the infrastructure we use rests almost entirely on a series of freely-developed projects came as a shock to me many years ago, and in lieu of payment, this section will acknowledge these projects, to the best of my ability.
 
-This work was undertaken on \texttt{ARC3} and \texttt{ARC4}, part of the High Performance Computing facilities at the University of Leeds, UK.
+This work was undertaken on the ARC3 and ARC4 computers, part of the High Performance Computing facilities at the University of Leeds, UK.
 Much of the earlier development and testing work was undertaken on workstations provided by the department.
 In particular was the 44 core workstation my supervisor used\footnote{Which I refer to as \texttt{jumpcannon}, after Annie Jump Cannon, though the name didn't catch on.}, whose computing brunt was used frequently throughout the project.
 
