--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -2283,6 +2283,22 @@
   file = {/Users/py13je/Zotero/storage/PMD9IR3H/Lamberts et al. - 2012 - Impact of orbital motion on the structure and stab.pdf}
 }
 
+@article{lambertsImpactOrbitalMotion2012a,
+  title = {Impact of Orbital Motion on the Structure and Stability of Adiabatic Shocks in Colliding Wind Binaries},
+  author = {Lamberts, A. and Dubus, G. and Lesur, G. and Fromang, S.},
+  date = {2012-10},
+  journaltitle = {Astronomy and Astrophysics},
+  volume = {546},
+  pages = {A60},
+  issn = {0004-6361},
+  doi = {10.1051/0004-6361/201219006},
+  url = {https://ui.adsabs.harvard.edu/abs/2012A&A...546A..60L/abstract},
+  urldate = {2022-03-27},
+  abstract = {Context. The collision of winds from massive stars in binaries results in the formation of a double-shock structure with observed signatures from radio to X-rays. {$<$}BR /{$>$} Aims: We study the structure and stability of the colliding wind region as it turns into a spiral owing to the orbital motion. We focus on adiabatic winds, where mixing between the two winds is expected to be restricted to the Kelvin-Helmholtz instability. Mixing of the Wolf-Rayet wind with hydrogen-rich material is important for dust formation in pinwheel nebulae such as WR 104, where the spiral structure has been resolved in infrared. {$<$}BR /{$>$} Methods: We use the hydrodynamical code RAMSES to solve the equations of hydrodynamics on an adaptive grid. A wide range of binary systems with different wind velocities and mass-loss rates are studied with two-dimensional simulations. A specific three-dimensional simulation is performed to model {$<$}ASTROBJ{$>$}WR 104{$<$}/ASTROBJ{$>$}. {$<$}BR /{$>$} Results: Orbital motion leads to the formation of two distinct spiral arms where the Kelvin-Helmholtz instability develops differently. We find that the spiral structure is destroyed when there is a large velocity gradient between the winds, unless the collimated wind is much faster. We argue that the Kelvin-Helmholtz instability plays a major role in determining whether the structure is maintained. We discuss the consequences for various colliding-wind binaries. When their spiral structure is stable, there is no straightforward relationship between the spatial step of the spiral, the wind velocities, and the orbital period. Our 3D simulation of WR 104 indicates that the colder, well-mixed trailing arm has more favourable conditions for dust formation than the leading arm. The single-arm infrared spiral follows more closely the mixing map than the density map, suggesting that the dust-to-gas ratio may vary between the leading and trailing density spirals. However, the density is much lower than what dust formation models require. Including radiative cooling would lead to higher densities, and also to thin shell instabilities whose impact on the large-scale structure remains unknown. {$<$}P /{$>$}Appendices are available in electronic form at {$<$}A href="http://www.aanda.org"{$>$}http://www.aanda.org{$<$}/A{$>$}},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/QSFPTXAT/Lamberts et al. - 2012 - Impact of orbital motion on the structure and stab.pdf;/Users/py13je/Zotero/storage/6J4LZDG5/abstract.html}
+}
+
 @book{lamersIntroductionStellarWinds1999,
   title = {Introduction to Stellar Winds},
   author = {Lamers, Henny JGLM and Cassinelli, Joseph P},
