First wave of corrections of ch.2

--- a/References/library.bib
+++ b/References/library.bib
@@ -1446,6 +1446,21 @@
   file = {/Users/py13je/Zotero/storage/FTNIT9R4/zbmath.org.html}
 }
 
+@article{gossetXMMNewtonLookWolfRayet2005,
+  title = {An {{XMM-Newton}} Look at the {{Wolf-Rayet}} Star {{WR}} 40. {{The}} Star Itself, Its Nebula and Its Neighbours},
+  author = {Gosset, E. and Naz{\'e}, Y. and Claeskens, J.-F. and Rauw, G. and Vreux, J.-M. and Sana, H.},
+  year = {2005},
+  month = jan,
+  journal = {Astronomy and Astrophysics},
+  volume = {429},
+  pages = {685--704},
+  issn = {0004-6361},
+  doi = {10.1051/0004-6361:20040286},
+  abstract = {We present the results of an XMM-Newton observation of the field of the Wolf-Rayet star WR 40. Despite a nominal exposure of 20 ks and the high sensitivity of the satellite, the star itself is not detected: we thus derive an upper limit on its X-ray flux and luminosity. Joining this result to recent reports of a non-detection of some WC stars, we suggest that the X-ray emission from single normal Wolf-Rayet stars could often be insignificant despite remarkable instabilities in the wind. On the basis of a simple modelling of the opacity of the Wolf-Rayet wind of WR 40, we show that any X-ray emission generated in the particular zone where the shocks are supposed to be numerous will indeed have little chance to emerge from the dense wind of the Wolf-Rayet star. We also report the non-detection of the ejecta nebula RCW 58 surrounding WR 40. Concerning the field around these objects, we detected 33 X-ray sources, most of them previously unknown: we establish a catalog of these sources and cross-correlate it with catalogs of optical/infrared sources. {$<$}P /{$>$}Based on observations with XMM-Newton, an ESA Science Mission with instruments and contributions directly funded by ESA Member States and the USA (NASA).},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/BS44EJQJ/Gosset et al. - 2005 - An XMM-Newton look at the Wolf-Rayet star WR 40. T.pdf;/Users/py13je/Zotero/storage/AJHJMXUM/abstract.html}
+}
+
 @article{gottliebHighOrderStrong2009,
   title = {High {{Order Strong Stability Preserving Time Discretizations}}},
   author = {Gottlieb, Sigal and Ketcheson, David I. and Shu, Chi-Wang},
@@ -1629,6 +1644,18 @@
   publisher = {{Springer Science and Business Media LLC}},
   doi = {10.1038/s41586-020-2649-2},
   keywords = {software}
+}
+
+@article{harrisThermonuclearReactionRates1983,
+  title = {Thermonuclear {{Reaction Rates}}, {{III}}},
+  author = {Harris, Michael J. and Fowler, William A. and Caughlan, Georgeanne R. and Zimmerman, Barbara A.},
+  year = {1983},
+  journal = {Annual Review of Astronomy and Astrophysics},
+  volume = {21},
+  number = {1},
+  pages = {165--176},
+  doi = {10.1146/annurev.aa.21.090183.001121},
+  annotation = {\_eprint: https://doi.org/10.1146/annurev.aa.21.090183.001121}
 }
 
 @book{hartquist_blowing_2004,
@@ -2793,6 +2820,22 @@
   file = {/Users/py13je/Zotero/storage/HX6FFG4C/Nazé et al. - 2018 - A Changing Wind Collision.pdf}
 }
 
+@article{nazeNewXrayDetections2021,
+  title = {New {{X-ray}} Detections of Known {{Wolf-Rayet}} Stars},
+  author = {Naz{\'e}, Ya{\"e}l and Gosset, Eric and Marechal, Quentin},
+  year = {2021},
+  month = mar,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {501},
+  pages = {4214--4225},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/staa3801},
+  abstract = {Using XMM-Newton, we undertook a dedicated project to search for X-ray bright wind-wind collisions in 18 WR+OB systems. We complemented these observations with Swift and Chandra data sets, allowing for the study of two additional systems. We also improved the ephemerides, for these systems displaying photometric changes, using TESS, Kepler, and ASAS-SN data. Five systems displayed a very faint X-ray emission (log [LX/LBOL] {$<$} -8) and three a faint one (log [LX/LBOL] {$\sim$} -7), incompatible with typical colliding wind emission: not all WR (Wolf-Rayet) binaries are thus X-ray bright. In a few other systems, X-rays from the O-star companion cannot be excluded as being the true source of X-rays (or a large contributor). In two additional cases, the emission appears faint but the observations were taken with the WR wind obscuring the line of sight, which could hide a colliding wind emission. Clear evidence of colliding winds was however found in the remaining six systems (WR 19, 21, 31, 97, 105, and 127). In WR 19, a large absorption and larger emission at periastron are even detected, in line with expectations of adiabatic collisions.},
+  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics,stars: early-type,stars: massive,stars: Wolf-Rayet,X-rays: stars},
+  annotation = {ADS Bibcode: 2021MNRAS.501.4214N},
+  file = {/Users/py13je/Zotero/storage/YDA8KHCI/Nazé et al. - 2021 - New X-ray detections of known Wolf-Rayet stars.pdf}
+}
+
 @article{neufeldRadiativeCoolingWarm1993,
   title = {Radiative {{Cooling}} of {{Warm Molecular Gas}}},
   author = {Neufeld, David A. and Kaufman, Michael J.},
@@ -3424,6 +3467,21 @@
   volume = {388},
   number = {2},
   pages = {552--562}
+}
+
+@article{rauwXrayEmissionMassive2022,
+  title = {X-Ray Emission of Massive Stars and Their Winds},
+  author = {Rauw, Gregor},
+  year = {2022},
+  month = mar,
+  journal = {arXiv:2203.16842 [astro-ph]},
+  eprint = {2203.16842},
+  eprinttype = {arxiv},
+  primaryclass = {astro-ph},
+  abstract = {Most types of massive stars display X-ray emission that is affected by the properties of their stellar winds. Single non-magnetic OB stars have an X-ray luminosity that scales with their bolometric luminosity and their emission is thought to arise from a distribution of wind-embedded shocks. The lack of significant short-term stochastic variability indicates that the winds consist of a large number of independent fragments. Detailed variability studies unveiled a connection between the photosphere and the wind: well-studied O-type stars exhibit a \textasciitilde{} 10\% modulation of their emission on timescales consistent with the rotation period, and a few early B-type pulsators display \textasciitilde{} 10\% modulations of their X-ray flux with the pulsation period. Unlike OB stars, their evolved descendants (WR and LBV stars) lack a well-defined relation between their X-ray and bolometric luminosities, and several subcategories of objects remain undetected. These properties most likely stem from the combined effects of wind optical depth and wind velocity. Magnetic OB stars display an enhanced X-ray emission frequently modulated by the rotation of the star. These properties are well explained by the magnetically confined wind shock model and an oblique magnetic rotator configuration. Some massive binaries display phase-dependent excess emission arising from the collision between the winds of the binary components. Yet, the majority of the massive binaries do not show such an emission, probably as a consequence of radiative cooling of the shock-heated plasma. Finally, a growing subset of the Be stars, the so-called gamma Cas stars, feature an unusually hard and strong thermal X-ray emission that varies over a wide range of timescales. Several scenarios have been proposed to explain these properties, but the origin of the phenomenon remains currently one of the major unsolved puzzles in stellar X-ray astrophysics.},
+  archiveprefix = {arXiv},
+  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics},
+  file = {/Users/py13je/Zotero/storage/WCUGEDQB/Rauw - 2022 - X-ray emission of massive stars and their winds.pdf;/Users/py13je/Zotero/storage/EGA7XIIH/2203.html}
 }
 
 @article{robitailleHYPERIONOpensourceParallelized2011,
