--- a/Thesis.tex
+++ b/Thesis.tex
@@ -170,6 +170,7 @@
 % Setup for BibLaTeX, used instead of BibTeX as it is more flexible
 \usepackage[
   style=apa,        % Use American Psychological Association style
+  uniquename=false, % Suppress initials
   backref=true,     % Link back to citation pages in bibliography
   backend=biber,    % Use biber to process citations
   bibencoding=utf8, % Ensure UTF8 encoding for fancy characters
