--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -7,6 +7,32 @@
 
 \setlength{\parindent}{17.62482pt}
 \setlength{\parskip}{0.0pt plus 1.0pt}
+
+Colliding wind binary (CWB) systems are exceptionally easy to understand systems at the most fundamental level.
+These systems consist of two stars in a binary system that produce winds that collide.
+Unlike many pieces of terminology in astrophysics, this one is fairly simple and self-explanatory.
+
+\begin{center}
+  This is where the simplicity ends, however.
+\end{center}
+
+These systems produce titanic quantities of x-rays, making them some of the brightest continuous x-ray sources in the galaxy.
+The innermost wind collision region is an enormous shocked region with temperatures typically on the order of $10^8$ Kelvin, driving these x-ray emissions.
+Whilst being very bright, they are are distant, rare, and their innermost depths are shrouded by dense stellar winds produced by the dominant Wolf-Rayet star driving their titanic shocks.
+As such, these systems are fundamentally very complex to observe \emph{and} simulate.
+
+What is most interesting is that despite violent shocks, intense x-ray emission and hot stellar winds, small interstellar dust grains of amorphous carbon are able to form.
+The quantity of these grains varies from system to system, but can be produced in quantities on the order of \SI{1e-6}{\solarmass\per\year} in the most extreme dust producing systems.
+The mechanisms of this dust creation and production are extremely poorly understood, as such we aim to shed some light on these systems through \emph{in silico} work.
+
+Through this project we have developed a model to simulate CWB systems using the open-source \athena{} hydrodynamical code.
+We have also incorporated a passive scalar model to simulate dust growth, destruction and radiative cooling.
+Using this model we have performed a parameter space search in order to understand which wind and stellar parameters affect dust growth and production in a CWB system.
+We have also performed a simulation of the episodic dust producing CWB system, WR140.
+Our results have determined which parameters are the most influential on dust growth within these systems.
+We have also managed to replicate the periodic nature of dust production in WR140 without artificial constraints, lending credence to the accuracy of our model.
+
+Whilst there is much to be done in the future, and many more systems to be simulated (in particular the recently discovered WR+WR CWB systems WR48a and WR70-16) we find that this model is a good first step towards shedding light on these elusive, dust shrouded systems\ldots
 	
 \end{abstracts}
 %\end{abstractlongs}
