Finished minor corrections on ch1&6

--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -8,7 +8,7 @@
 \setlength{\parindent}{17.62482pt}
 \setlength{\parskip}{0.0pt plus 1.0pt}
 
-Colliding wind binary (CWB) systems are exceptionally easy to understand systems at the most fundamental level.
+Colliding wind binary (CWB) systems are exceptionally easy to understand at the most fundamental level.
 These systems consist of two stars in a binary system that produce winds that collide.
 Unlike many pieces of terminology in astrophysics, this one is fairly simple and self-explanatory.
 
