--- a/Appendix/Appendix.tex
+++ b/Appendix/Appendix.tex
@@ -14,7 +14,7 @@ This section contains a breakdown of the cooling and dust models, along with an 
 
 This project relied on a number of resources available from the University of Leeds, as well as many open source projects scattered around the globe.
 Not to opine on the importance of open source projects for too long, but we as researchers should be aware of the time, effort and labour of programmers developing open source projects.
-Learning that perhaps the bulk of the infrastructure we use rests almost entirely on a series of freely-developed projects came as a shock to me many years ago, and in lieu of payment, this section will acknowledge these projects, to the best of my ability.
+Learning that perhaps the bulk of the infrastructure we use rests almost entirely on a series of freely-developed projects came as a shock to me many years ago, and in lieu of payment, this section will acknowledge these projects.
 
 This work was undertaken on the ARC3 and ARC4 computers, part of the High Performance Computing facilities at the University of Leeds, UK.
 Much of the earlier development and testing work was undertaken on workstations provided by the department.
@@ -28,6 +28,7 @@ A good deal of the data reduction of this thesis was conducted using the Python 
   \item \footlink{\texttt{Matplotlib}}{https://matplotlib.org/} \parencite{Hunter:2007}.
 \end{itemize}
 
+\noindent
 \athena{} \parencite{athena} was also used extensively throughout the work in this thesis.
 Whilst there are some aspects of this that need further development - in particular, passive scalars in AMR problems - it was found to be extremely robust, and easy to develop for.
 Some diagrams in this work, specifically Fig. \ref{fig:quiver-h} and Fig. \ref{fig:quiver-oplus} use the \footlink{Quiver}{https://q.uiver.app/} communicative diagram editor.
@@ -187,5 +188,6 @@ This is going to be a very short section, as it is more of a plea to other docto
 Use version control in your projects, the number of times I lost work or code because I did not use version control software like \texttt{Git} in my first year is frankly far too high.
 It'll save you a lot of time in the long run, trust me.
 
-\noindent
-Keep your thesis on there too.
+\begin{center}
+  Keep your thesis on there too!
+\end{center}
