--- a/References/library.bib
+++ b/References/library.bib
@@ -1242,6 +1242,22 @@
   file = {/Users/py13je/Zotero/storage/R3DCMNWT/Eldridge et al. - 2013 - The death of massive stars – II. Observational con.pdf;/Users/py13je/Zotero/storage/R7MQPI3T/976309.html}
 }
 
+@article{fahedSpectroscopyArchetypeCollidingwind2011,
+  title = {Spectroscopy of the Archetype Colliding-Wind Binary {{WR}} 140 during the 2009 {{January}} Periastron Passage},
+  author = {Fahed, R. and Moffat, A. F. J. and Zorec, J. and Eversberg, T. and Chen{\'e}, A. N. and Alves, F. and Arnold, W. and Bergmann, T. and Corcoran, M. F. and Correia Viegas, N. G. and Dougherty, S. M. and Fernando, A. and Fr{\'e}mat, Y. and Gouveia Carreira, L. F. and Hunger, T. and Knapen, J. H. and Leadbeater, R. and Marques Dias, F. and Martayan, C. and Morel, T. and Pittard, J. M. and Pollock, A. M. T. and Rauw, G. and Reinecke, N. and Ribeiro, J. and Romeo, N. and {S{\'a}nchez-Gallego}, J. R. and Dos Santos, E. M. and Schanne, L. and Stahl, O. and Stober, Ba. and Stober, Be. and Vollmann, K. and Williams, P. M.},
+  year = {2011},
+  month = nov,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {418},
+  pages = {2--13},
+  issn = {0035-8711},
+  doi = {10.1111/j.1365-2966.2011.19035.x},
+  abstract = {We present the results from the spectroscopic monitoring of WR 140 (WC7pd + O5.5fc) during its latest periastron passage in 2009 January. The observational campaign consisted of a constructive collaboration between amateur and professional astronomers. It took place at six locations, including Teide Observatory, Observatoire de Haute Provence, Dominion Astrophysical Observatory and Observatoire du Mont M\'egantic. WR 140 is known as the archetype of colliding-wind binaries and it has a relatively long period (?8 yr) and high eccentricity (?0.9). We provide updated values for the orbital parameters, new estimates for the WR and O star masses and new constraints on the mass-loss rates and colliding-wind geometry.},
+  keywords = {binaries: general,outflows,stars: fundamental parameters,stars: winds,stars: Wolf-Rayet},
+  annotation = {ADS Bibcode: 2011MNRAS.418....2F},
+  file = {/Users/py13je/Zotero/storage/EJDXAPD7/Fahed et al. - 2011 - Spectroscopy of the archetype colliding-wind binar.pdf}
+}
+
 @article{falleSelfsimilarJets1991,
   title = {Self-Similar Jets},
   author = {Falle, S. a. E. G.},
